--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
 
         <activity android:name=".view.avtivity.LoginActivity"/>
         <activity android:name=".view.avtivity.RegisterActivity"/>
+        <activity android:name=".view.avtivity.UpLoadActivity"/>
     </application>
 
 </manifest>
